# chessviz

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  setup_env.sh
apps/viewer/: index.html  package.json  tsconfig.json  vite.config.ts
apps/viewer/src/: App.tsx
artifacts/: README.md
artifacts/builder/: README.md  bootstrap.json  web-corpus.json
artifacts/builder/endgame-table/: manifest.json
artifacts/builder/opening-table/: manifest.json
artifacts/viewer/: README.md  scene-manifest.json
plan/: acceptance.md  completion-log.md  continuation.md  decisions.md  kill-game-line-model-instructions.md  requirements.md  roadmap.md  visual-design-commitments.md
tools/builder/: README.md  pyproject.toml
tools/builder/fixtures/: initial_corpus.json
tools/builder/fixtures/imports/endgame/: fixture-endgame-slice.json
tools/builder/fixtures/imports/opening/: fixture-opening-slice.json
tools/builder/src/chessviz_builder/: __init__.py  artifact_manifest.py  cli.py  config.py  contracts.py  corpus_ingest.py  dag.py  embedding.py  endgame_table.py  labeling.py  occurrence_identity.py  opening_table.py  pipeline.py  publication.py  repeated_state.py  salience.py  state_key.py  terminal_labeling.py  transition_departure.py
tools/builder/tests/: test_artifact_manifest.py  test_corpus_ingest.py  test_dag.py  test_departure_rules.py  test_embedding.py  test_identity_layer.py  test_labeling.py  test_repeated_state.py  test_salience.py  test_table_publication.py  test_terminal_labeling.py  test_transition_facts.py
(+47 files in other folders)
