[project]
name = "chessviz-builder"
version = "0.1.0"
description = "Environment bootstrap CLI for chessviz builder workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chess>=1.11.2",
]

[project.scripts]
chessviz-builder = "chessviz_builder.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/chessviz_builder"]
